committing for the day

--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,12 @@
   <title>Tournament Ticket</title>
   <script type="text/javascript" src="./dist/lib.js"></script>
   <script type="text/javascript" src="./dist/src.js"></script>
+  <link rel="stylesheet" type="text/css" href="./lib/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
 <div>test</div>
+<div ui-view>
+  
+</div>
 </body>
 </html>
