fixed service and controller interaction

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,11 +1,6 @@
 <div class="container">
   <h1>Hello World</h1>
-  <button ng-controller='namesCtrl' ng-click='getData()'>button</button>
+  <button ng-controller='mainCtrl' ng-click='getData()'>button</button>
 
-
-<ul ng-controller="namesCtrl">
-    <li ng-repeat="x in names">
-        {{ x.game }}
-    </li>
 </ul>
 </div>
