added selection functionality and 4 iframes

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -10,5 +10,9 @@
     </li>
   </ul>
 
+<iframe id='first' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=true></iframe>
+<iframe id='second' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=true></iframe>
+<iframe id='third' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=true></iframe>
+<iframe id='fourth' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=true></iframe>
 </ul>
 </div>
