--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,12 @@
   <title>Tournament Ticket</title>
   <script type="text/javascript" src="./dist/lib.js"></script>
   <script type="text/javascript" src="./dist/src.js"></script>
+  <script src="https://ttv-api.s3.amazonaws.com/twitch.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./lib/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
+<script>
+</script>
 <div>test</div>
 <div ui-view>
   
