--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -10,9 +10,14 @@
     </li>
   </ul>
 
-<iframe id='first' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=true></iframe>
-<iframe id='second' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=true></iframe>
+
+<iframe id='0' src="http://www.twitch.tv/kinggothalion/embed" frameborder="0" scrolling="no" height="378" width="620"></iframe>
+<iframe id='1' src="http://www.twitch.tv/kinggothalion/embed" frameborder="0" scrolling="no" height="378" width="620"></iframe>
+<iframe id='2' src="http://www.twitch.tv/kinggothalion/embed" frameborder="0" scrolling="no" height="378" width="620"></iframe>
+<iframe id='3' src="http://www.twitch.tv/kinggothalion/embed" frameborder="0" scrolling="no" height="378" width="620"></iframe>
+
+<!-- <iframe id='second' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=true></iframe>
 <iframe id='third' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=true></iframe>
-<iframe id='fourth' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=true></iframe>
+<iframe id='fourth' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=true></iframe> -->
 </ul>
 </div>
