--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="./dist/src.js"></script>
   <script src="https://ttv-api.s3.amazonaws.com/twitch.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./lib/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
 <script>
