committing new changes

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
     <div id="overlay-source-search" class="overlay">
         <form>
             <input type="text" placeholder="Search" ng-model='query' ng-keyup='searchData(query)'></input>
@@ -19,11 +19,11 @@
   </ul> -->
         </div>
     </div>
-    <div class='vids-container'>
-        <iframe id='0' class='vids' src="http://www.twitch.tv/anis13000/embed" frameborder="0" scrolling="no"></iframe>
-        <iframe id='1' class='vids' src="http://www.twitch.tv/anis13000/embed" frameborder="0" scrolling="no"></iframe>
-        <iframe id='2' class='vids' src="http://www.twitch.tv/anis13000/embed" frameborder="0" scrolling="no"></iframe>
-        <iframe id='3' class='vids' src="http://www.twitch.tv/anis13000/embed" frameborder="0" scrolling="no"></iframe>
+    <div class='vids-container' style="height:400px;">
+        <iframe id='0' class='vids' src="http://www.twitch.tv/anis13000/embed" frameborder="0" scrolling="no" allowFullscreen></iframe>
+        <iframe id='1' class='vids' src="http://www.twitch.tv/anis13000/embed" frameborder="0" scrolling="no" allowFullscreen></iframe>
+        <iframe id='2' class='vids' src="http://www.twitch.tv/anis13000/embed" frameborder="0" scrolling="no" allowFullscreen></iframe>
+        <iframe id='3' class='vids' src="http://www.twitch.tv/anis13000/embed" frameborder="0" scrolling="no" allowFullscreen></iframe>
     </div>
 </div>
 <!-- <iframe id='second' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=true></iframe> -->
