added more styling and fixed some issues with search functionality

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,10 +1,10 @@
-<div class="container">
+<div class="container centered">
     <div id="overlay-source-search" class="overlay">
-        <form>
+        <form class='search-form'>
             <input type="text" placeholder="Search" ng-model='query' ng-keyup='searchData(query)'></input>
         </form>
-        <div class="overlay-content">
-            <div class='result-containter' ng-show="query!== ''" ng-repeat="x in games | unique: 'game'" ng-click='getData(x.game)'>
+        <div class="overlay-content centered">
+            <div class='result-container' ng-show="query!== ''" ng-repeat="x in games | limitTo: 3" ng-click='getData(x.game)'>
                 <img class="small-artwork" src="http://static-cdn.jtvnw.net/ttv-boxart/{{x.ico}}" height='100'>
                 <div class='result-info'>
                     <div>
@@ -19,11 +19,11 @@
   </ul> -->
         </div>
     </div>
-    <div class='vids-container' style="height:400px;">
-        <iframe id='0' class='vids' src="http://www.twitch.tv/anis13000/embed" frameborder="0" scrolling="no" allowFullscreen></iframe>
-        <iframe id='1' class='vids' src="http://www.twitch.tv/anis13000/embed" frameborder="0" scrolling="no" allowFullscreen></iframe>
-        <iframe id='2' class='vids' src="http://www.twitch.tv/anis13000/embed" frameborder="0" scrolling="no" allowFullscreen></iframe>
-        <iframe id='3' class='vids' src="http://www.twitch.tv/anis13000/embed" frameborder="0" scrolling="no" allowFullscreen></iframe>
+    <div class='vids-container'>
+        <iframe id='0' class='vids' src="" frameborder="0" scrolling="no" allowFullscreen></iframe>
+        <iframe id='1' class='vids' src="" frameborder="0" scrolling="no" allowFullscreen></iframe>
+        <iframe id='2' class='vids' src="" frameborder="0" scrolling="no" allowFullscreen></iframe>
+        <iframe id='3' class='vids' src="" frameborder="0" scrolling="no" allowFullscreen></iframe>
     </div>
 </div>
 <!-- <iframe id='second' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=true></iframe> -->
