--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,9 @@
     <title>Tournament Ticket</title>
     <!-- <script src="https://ttv-api.s3.amazonaws.com/twitch.min.js"></script> -->
     <script type="text/javascript" src="./dist/lib.js"></script>
-    <script type="text/javascript" src="./dist/src.js"></script>
+    <script type="text/javascript" src="./dist/src.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./lib/bootstrap/dist/css/bootstrap.css">
-    <script type="text/javascript" src="./lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script type="text/javascript" src="./lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     
 </head>
