--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <title>Tournament Ticket</title>
-    <!-- <script src="https://ttv-api.s3.amazonaws.com/twitch.min.js"></script> -->
     <script type="text/javascript" src="./dist/lib.js"></script>
     <script type="text/javascript" src="./dist/src.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./lib/bootstrap/dist/css/bootstrap.css">
-    <script type="text/javascript" src="./lib/bootstrap/dist/js/bootstrap.min.js"></script>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     
 </head>
