fixed iframe sound

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -12,20 +12,15 @@
                     </div>
                 </div>
             </div>
-            <!--   <ul>
-    <li ng-repeat="x in games | unique: 'game'" ng-click='getData(x.game)'>
-      {{x.game}}
-    </li>
-  </ul> -->
+
         </div>
     </div>
     <div class='vids-container'>
-        <iframe id='0' class='vids' src="" frameborder="0" scrolling="no" allowFullscreen></iframe>
-        <iframe id='1' class='vids' src="" frameborder="0" scrolling="no" allowFullscreen></iframe>
-        <iframe id='2' class='vids' src="" frameborder="0" scrolling="no" allowFullscreen></iframe>
-        <iframe id='3' class='vids' src="" frameborder="0" scrolling="no" allowFullscreen></iframe>
+
+        <iframe id='0' class='vids' src="http://player.twitch.tv/?channel=stonedyooda&!muted" allowfullscreen></iframe>
+        <iframe id='1' class='vids' src="http://player.twitch.tv/?channel=stonedyooda&muted" allowfullscreen></iframe>
+        <iframe id='2' class='vids' src="http://player.twitch.tv/?channel=stonedyooda&muted" allowfullscreen></iframe>
+        <iframe id='3' class='vids' src="http://player.twitch.tv/?channel=stonedyooda&muted" allowfullscreen></iframe>
     </div>
 </div>
-<!-- <iframe id='second' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=true></iframe> -->
-<!-- <iframe id='third' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=true></iframe> -->
-<!-- <iframe id='fourth' src="http://player.twitch.tv/?channel=kinggothalion" allowfullscreen autoplay=0 muted=0></iframe> -->
+
