--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Tournament Ticket</title>
     <script type="text/javascript" src="./dist/lib.js"></script>
-    <script type="text/javascript" src="./dist/src.min.js"></script>
+    <script type="text/javascript" src="./dist/src.js"></script>
     <link rel="stylesheet" type="text/css" href="./lib/bootstrap/dist/css/bootstrap.css">
     <script type="text/javascript" src="./lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
