--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -17,10 +17,10 @@
     </div>
     <div class='vids-container'>
 
-        <iframe id='0' class='vids' src="http://player.twitch.tv/?channel=stonedyooda&!muted" allowfullscreen></iframe>
-        <iframe id='1' class='vids' src="http://player.twitch.tv/?channel=stonedyooda&muted" allowfullscreen></iframe>
-        <iframe id='2' class='vids' src="http://player.twitch.tv/?channel=stonedyooda&muted" allowfullscreen></iframe>
-        <iframe id='3' class='vids' src="http://player.twitch.tv/?channel=stonedyooda&muted" allowfullscreen></iframe>
+        <iframe id='0' class='vids' src="https://player.twitch.tv/?channel=stonedyooda&!muted" allowfullscreen></iframe>
+        <iframe id='1' class='vids' src="https://player.twitch.tv/?channel=stonedyooda&muted" allowfullscreen></iframe>
+        <iframe id='2' class='vids' src="https://player.twitch.tv/?channel=stonedyooda&muted" allowfullscreen></iframe>
+        <iframe id='3' class='vids' src="https://player.twitch.tv/?channel=stonedyooda&muted" allowfullscreen></iframe>
     </div>
 </div>
 
