--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -12,15 +12,12 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
     <div class='vids-container'>
-
-        <iframe id='0' class='vids' src="https://player.twitch.tv/?channel=stonedyooda&!muted" allowfullscreen></iframe>
-        <iframe id='1' class='vids' src="https://player.twitch.tv/?channel=stonedyooda&muted" allowfullscreen></iframe>
-        <iframe id='2' class='vids' src="https://player.twitch.tv/?channel=stonedyooda&muted" allowfullscreen></iframe>
-        <iframe id='3' class='vids' src="https://player.twitch.tv/?channel=stonedyooda&muted" allowfullscreen></iframe>
+        <iframe id='0' class='vids' allowfullscreen></iframe>
+        <iframe id='1' class='vids' allowfullscreen></iframe>
+        <iframe id='2' class='vids' allowfullscreen></iframe>
+        <iframe id='3' class='vids' allowfullscreen></iframe>
     </div>
 </div>
-
